# MLOps

./: .pre-commit-config.yaml  README.md  infer.py  main.py  pyproject.toml  train.py
.dvc/: config
MLOps/: common.py  infer.py  train.py
configs/: config.yaml
data/: .gitignore  diabetes.dvc  test.csv.dvc  train.csv.dvc
models/: random_forest
src/: common.py  model.py
