[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Nikita Shaposhnik <nikita.shaposhnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.43.1"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
